crates/squealy/tests/compile_fail/bare_column_rejected_with_having_no_group_by.stderr
error[E0271]: type mismatch resolving `<ColumnRef<'_, UserId> as ProjectionColumns>::Columns == ColumnFree`
  --> tests/compile_fail/bare_column_rejected_with_having_no_group_by.rs:17:10
   |
17 |         .select(|(user,)| user.id);
   |          ^^^^^^ expected `ColumnFree`, found `HasBareColumn`
   |
   = note: required for `Aggregated` to implement `squealy::ValidSelect<ColumnRef<'_, UserId>, OrderNone>`
note: required by a bound in `squealy::SourceQuery::select`
  --> src/query.rs
   |
   |     fn select<P, Indices>(
   |        ------ required by a bound in this associated function
...
   |             crate::ValidSelect<P, <Self as SelectAst<'conn, 'scope, Conn>>::OrderClass>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SourceQuery::select`
